# GilmoresProcedure

./: CMakeLists.txt  GilmoresProcedure.pro  README.md  and.cpp  and.h  atom.cpp  atom.h  atomic_formula.cpp  atomic_formula.h  base_formula.cpp  base_formula.h  base_term.cpp  base_term.h  binary_connective.cpp  binary_connective.h  common.h  constants.cpp  constants.h  domain.cpp  domain.h  exists.cpp  exists.h  first_order_logic.h  forall.cpp  forall.h  function_term.cpp  function_term.h  gilmore.cpp  gilmore.h  herbrand.cpp  herbrand.h  iff.cpp  iff.h  imp.cpp  imp.h  lstructure.cpp  lstructure.h  main.cpp  not.cpp  not.h  (+12 more)
